--- a/style.css
+++ b/style.css
@@ -1,10 +1,50 @@
 .copy {
-    max-width: 800px;
-    font-size: calc(0.8rem + 0.8vw);
+    max-width: 700px;
+    font-size: calc(0.8rem + 0.6vw);
 }
 
 body {
     background-color: #FFFEF7;
+}
+
+.section2,
+.section1,
+.section3,
+.section4,
+.section5 {
+    /*    margin-bottom: 300px !important;*/
+    margin-bottom: 100px !important;
+
+}
+
+.btn {
+
+    padding: 0;
+    font-weight: 400;
+    font-size: calc(0.8rem + 0.6vw);
+    background-color: transparent;
+    border: none;
+    border-radius: none;
+    color: black;
+
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+.arrow {
+    font-weight: 200;
+    transform: scaleX(2);
+
+}
+
+.btn:hover {
+    background-color: transparent;
+    color: #A3A162;
+    border-color: transparent;
+    border: none;
+    font-weight: 400;
 }
 
 .bg-img-vertical {
@@ -12,44 +52,39 @@ body {
 }
 
 .position-bag {
-
-    width: 50vw;
-    left: 5vw;
-    top: 320vw;
-
-
-
-
+    width: 50%;
+    padding-top: 750px;
+    /*    left: 5vw;*/
+    margin-right: 40vw;
 }
 
-.position {
-    width: 50vw;
-    right: 50vw;
-}
 
 .position2 {
-    width: 60vw;
-    left: 5vw;
-    top: 465vw;
-
+    width: 50%;
+    padding-top: 120px;
+    /*    left: 5vw;*/
+    margin-right: 40vw;
 }
 
 .position3 {
-    width: 60vw;
-    left: 5vw;
-
+    width: 50%;
+    padding-top: 620px;
+    /*    left: 5vw;*/
+    margin-right: 40vw;
 }
 
 .position4 {
-    width: 60vw;
-    left: 5vw;
-
+    width: 50%;
+    padding-top: 90px;
+    /*    left: 5vw;*/
+    margin-right: 40vw;
 }
 
 .position5 {
-    width: 60vw;
-    left: 5vw;
-
+    width: 50%;
+    padding-top: 620px;
+    /*    left: 5vw;*/
+    margin-right: 40vw;
 }
 
 
@@ -79,7 +114,7 @@ p {
 .quote {
     font-family: helvetica;
     font-weight: 600;
-    font-size: calc(2rem + 0.8vw);
+    font-size: calc(2rem + 1.5vw);
     margin: 0;
 }
 
@@ -90,6 +125,8 @@ p {
 .splash {
     background-image: url(img/landing/mobile/sektion1/mb-bw-baggrund.jpg);
     background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 
@@ -98,10 +135,186 @@ p {
 
 /*----------MEDIA QUERIES------------*/
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 436px) {
     .position-bag {
-        right: 22vw;
-        width: 40vw;
-        height: 28vw;
+        /*        right: 22vw;*/
+        /*        width: 20%;*/
+        /*        height: 28vw;*/
+        padding-top: 900px;
+        /*        margin-right: 340px;*/
+
+    }
+
+    .position2 {
+        width: 50%;
+        /*    padding-top: 750px;*/
+        /*    left: 5vw;*/
+        margin-right: 40vw;
+    }
+
+    .position3 {
+        width: 50%;
+        padding-top: 700px;
+        /*    left: 5vw;*/
+        margin-right: 40vw;
+    }
+
+    .position4 {
+        width: 50%;
+        padding-bottom: 60px;
+        /*    left: 5vw;*/
+        margin-right: 40vw;
+    }
+
+    .position5 {
+        width: 50%;
+        padding-top: 600px;
+        /*    left: 5vw;*/
+        margin-right: 40vw;
     }
 }
+
+@media screen and (min-width: 576px) {
+    .position-bag {
+        /*        right: 22vw;*/
+        /*        width: 20%;*/
+        /*        height: 28vw;*/
+        padding-top: 900px;
+        /*        margin-right: 340px;*/
+
+    }
+
+    .position2 {
+        width: 50%;
+        padding-top: 0;
+        /*    left: 5vw;*/
+        margin-right: 40vw;
+    }
+
+    .position3 {
+        width: 50%;
+        padding-top: 750px;
+        /*    left: 5vw;*/
+        margin-right: 40vw;
+    }
+
+    .position4 {
+        width: 50%;
+        padding-top: 0;
+        /*    left: 5vw;*/
+        margin-right: 40vw;
+    }
+
+    .position5 {
+        width: 50%;
+        padding-top: 900px;
+        /*    left: 5vw;*/
+        margin-right: 40vw;
+    }
+}
+
+@media screen and (min-width: 862px) {
+    .position-bag {
+        /*        right: 22vw;*/
+        /*        width: 20%;*/
+        /*        height: 28vw;*/
+        padding-top: 950px;
+        /*        margin-right: 340px;*/
+
+    }
+
+    .position2 {
+        width: 50%;
+        /*    padding-top: 750px;*/
+        /*    left: 5vw;*/
+        margin-right: 40vw;
+    }
+
+    .position3 {
+        width: 50%;
+        padding-top: 850px;
+        /*    left: 5vw;*/
+        margin-right: 40vw;
+    }
+
+    .position4 {
+        width: 50%;
+
+        /*    left: 5vw;*/
+        margin-right: 40vw;
+    }
+
+    .position5 {
+        width: 50%;
+        padding-top: 900px;
+        /*    left: 5vw;*/
+        margin-right: 40vw;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .position3 {
+        /*        right: 22vw;*/
+
+        /*        height: 28vw;*/
+        padding-top: 900px;
+        /*        margin-right: 340px;*/
+
+    }
+
+
+
+    @media screen and (min-width: 992px) {
+        .position-bag {
+            /*        right: 22vw;*/
+            width: 20%;
+            /*        height: 28vw;*/
+            padding-top: 300px;
+            margin-right: 20vw;
+
+        }
+
+        .position2 {
+            width: 20%;
+            padding-top: 0;
+            padding-bottom: 300px;
+            /*    left: 5vw;*/
+            margin-right: 70vw;
+        }
+
+        .position3 {
+            width: 20%;
+            padding-top: 400px;
+            /*    left: 5vw;*/
+            margin-right: 20vw;
+        }
+
+        .position4 {
+            width: 20%;
+            padding-top: 0;
+            padding-bottom: 300px;
+            /*    left: 5vw;*/
+            margin-right: 70vw;
+        }
+
+        .position5 {
+            width: 20%;
+            padding-top: 400px;
+            /*    left: 5vw;*/
+            margin-right: 20vw;
+
+        }
+
+        .section2,
+        .section1,
+        .section3,
+        .section4,
+        .section5 {
+            margin-bottom: 300px !important;
+        }
+
+        .container-fluid {
+            padding-left: 100px !important;
+            padding-right: 100px !important;
+        }
+    }
